--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "node dist/server.js",
     "dev": "nodemon --exec ts-node src/server.ts",
     "build": "tsc",
+	"doc:bundle": "swagger-cli bundle ./docs/swagger/swagger.yaml --outfile ./docs/swagger/swagger.json --type json",
+    "prestart": "npm run build && npm run doc:bundle",
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint src/**/*.ts",
@@ -17,10 +19,13 @@
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@apidevtools/swagger-cli": "^4.0.4",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^24.7.2",
     "@types/supertest": "^6.0.3",
+    "@types/swagger-ui-express": "^4.1.8",
     "@typescript-eslint/eslint-plugin": "^8.46.1",
     "@typescript-eslint/parser": "^8.46.1",
     "eslint": "^9.37.0",
@@ -33,6 +38,7 @@
   },
   "dependencies": {
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "swagger-ui-express": "^5.0.1"
   }
 }
