--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tictactrip-justify-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/server.js",
   "scripts": {
     "start": "node dist/server.js",
     "dev": "nodemon --exec ts-node src/server.ts",
